# bertalign

./: .gitignore  README.md  demo.py  pyproject.toml
bertalign/: __init__.py  aligner.py  corelib.py  eval.py  utils.py
examples/: rashomon.py
examples/texts/: README.md  clean_en.py  clean_ja.py  rashomon_en.txt  rashomon_ja.txt
