[project]
name = "bertalign"
version = "1.1.0"
description = "An automatic multilingual sentence aligner."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numba",
    "sentence-transformers",
    "wtpsplit",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bertalign"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
# Ruff's default rule set (pyflakes + a subset of pycodestyle), pinned so the
# selection is stable across ruff versions.
select = ["E4", "E7", "E9", "F"]
